force-app/main/default/objects/Inapp_Email_Log__c/Inapp_Email_Log__c.object-meta.xml
<CustomObject>
    <label>Inapp Email Log</label>
    <nameField>
        <displayFormat>IEL-{000000000}</displayFormat>
        <label>Inapp Email Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inapp Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>