force-app/main/default/objects/Inapp_Email_Log__c/fields/Plain_Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Plain_Text_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plain Text Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>